# Study_C

./: .gitignore  1.cpp  Actor  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Doctor  Engineer  Journalist  Makefile  MyTest  Pilot  README.md  VALGRIND_LOG  coverage.info  memtest.sh  run_coverage.sh  run_linters.sh  run_memtest.sh  run_test.sh  run_tests.sh  task  test  tmmmmp  tmp.txt
.github/workflows/: ci.yml
1/training/: 1.cpp
2/: 2.cpp  Example_2
2/training/: 2.cpp  Example_2
3/: 3.cpp  Example_3
3/training/: 3.cpp
4/: 4.cpp  Example_4
4/training/: 4.cpp  Example_4
5/: 5.cpp  Example_5
5/training/: 5.cpp
6/: 6.cpp
6/training/: 6.cpp
Chelenge/Tests/: A
Tasks/: 4(4)jpg
backend_contest/1/: Example_1
backend_contest/2/: Example_2
backend_contest/3/: Example_3
backend_contest/4/: Example_4
backend_contest/5/: Example_5
backend_contest/6/: Example_6
btests/: 4.0.tst  run.sh
chelenge/check_definition_Euler_cycle/: check_definition_Euler_cycle.cpp
chelenge/hash_table/: hash_table.cpp
chelenge/min_value_binary_tree/: min_value_binary_tree.cpp
chelenge/mod_1/: A.cpp
chelenge/mod_2/: D.cpp
chelenge/mod_3/: A.cpp  C.cpp
chelenge/shortest_path_root_list/: shortest_path_root_list.cpp
generator_data/: CMakeLists.txt
generator_data/include/: fields.h  generator.h  load_variants.h  utils.h
generator_data/sets/: female_name.txt  female_surname.txt  male_name.txt  male_surname.txt  position.txt  surname.txt
generator_data/src/: fields.c  generator.c  load_variants.c  main.c  utils.c
generator_data/src/fields/: name.c  position.c  surname.c
gtest/: CMakeLists.txt  general.cpp  gtest.cpp  imperative_model.cpp  multi_threded_model.cpp
gtest/data/incorrect_input/: in.txt  out.txt
gtest/data/ok/: in.txt  out.txt
gtest/imperative_model/: test.cpp
gtest/src/: test_blanks.cpp
interview_contest/1/: 1.cpp  Example_1
interview_contest/2/: 2.cpp  Example_2
interview_contest/3/: 3.cpp  Example_3
interview_contest/4/: Example_4
interview_contest/5/: 5.cpp  5_set.cpp  Example_5
interview_contest/6/: 6.cpp  Example_6
interview_contest/7/: 7.cpp
linters/: run.sh
module_1/: 2.cpp  3.cpp  4.cpp  6.cpp  7.cpp  Example_2  Example_3  Example_4  Example_5  Example_7
module_1/4/: 4.cpp
module_1/5/: 5.cpp  Example_5
module_1/6/: Example_6
module_1/RK/: A.cpp
module_1/Tests/: Example_1  Example_2  Example_4  Example_5  Example_7
module_2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
module_2/Dop_info/: hash_table_chain.cpp
module_2/RK/: A.cpp  B.cpp  D.cpp
module_3/: 1.cpp  2.cpp
module_3/1/: ArcGraphImpl.cpp  ListGraphImpl.cpp  MatrixGraphImpl.cpp  SetGraphImpl.cpp  main.cpp
module_3/RK/: A.cpp  (+1 more)
project/: CMakeLists.txt  main.c
project/array/backpack/: backpack.cpp
project/array/binaty_quick_sort/: binaty_quick_sort.cpp
project/array/expotential_binary_search/: expotential_binary_search.cpp
project/array/expotential_binary_search/tests/input/: 1.txt
project/array/merge_sort/: merge_sort.cpp
project/array/priority_heap/: priority_heap.cpp
project/array/priority_heap/tests/input/: 1.txt
project/bit_inversion/: bit_inversion.cpp
project/blanks_lib/include/: blank.h  list_blanks.h  list_parts.h  utils.h
project/blanks_lib/src/: blank.c  list_blanks.c  list_parts.c  utils.c
project/general/include/: database.h  load_database.h  utils.h
project/general/src/: database.c  format_record.c  format_record_impl.c  load_database.c  record.c  record_format.c  record_functional.c  record_impl.c  record_sort.c  record_sort_impl.c  utils.c
project/graph/count_shortest_path/: count_shortest_path.cpp
project/graph/count_shortest_path/tests/input/: 1.txt
project/graph/minimal_island_tree/tests/input/: 2.txt
project/graph/shortest_path/: shortest_path.cpp
project/graph/structs/include/: IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  Utils.hpp
project/graph/structs/src/: ListGraphImpl.cpp  main.cpp
project/gtest/: CMakeLists.txt  gtest.cpp
project/gtest/data/incorrect_input/: in.txt  out.txt
project/gtest/data/ok/: in.txt  out.txt
project/gtest/src/: test_blanks.cpp
project/hash_table/chains/: chains.cpp
project/hash_table/public_addressing/: public_addressing.cpp
project/hash_table/public_addressing/tests/input/: 3.txt
project/imperative_model/include/: list_blanks.h
project/imperative_model/src/: utils.c
project/include/: base_struct.h  base_utils_file.h  case_3.h  case_4.h  check_num.h  input.h  input_data.h  list_parts.h  matrix.h  my_rec.h  parser.h  std_in_out.h  std_in_out_data.h  struct_&_const.h  struct_and_const.h  test_compare.h  test_w_to_file.h  utils.h  utils_for_file.h  w_r_file.h  w_r_files.h
project/k_ordinal_statistics/: k_ordinal_statistics.cpp
project/pattern/: CMakeLists.txt
project/pattern/imperative_model/include/: database_functional.h  matrix.h
project/pattern/imperative_model/src/: database_functional_impl.c  database_functional_impl.cpp  matrix.c
project/pattern/multi_threaded_model/include/: database_functional_multu_thread.h  matrix.h
project/pattern/multi_threaded_model/src/: database_functional_multi_thread_impl.c  matrix.c
project/src/: base_utils_file.c  case_3.c  case_4.c  check_num.c  input.c  input_data.c  list_blanks.c  list_parts.c  main.c  matrix.c  my_rec.c  opr_basic.c  opr_extra.c  opr_math.c  opr_sup_check.c  opr_sup_foo.c  opr_sup_step_veiv_foo.c  parser.c  parser_sup.c  parser_utils.c  std_in_out.c  std_in_out_data.c  test_compare.c  test_w_to_file.c  utils.c  utils_for_file.c  w_r_file.c  w_r_files.c
project/tree/AVL_tree/: AVL_tree.cpp
project/tree/B_tree/: B_tree.cpp
project/tree/B_tree/tests/input/: 1.txt  2.txt
project/tree/Huffman_archiver/: Huffman_archiver.cpp
project/tree/Huffman_archiver/tests/input/: 1.txt  online_generator_txt.txt  picture_6.txt  something.txt  война и мир 2.txt
project/tree/binary_tree/: binary_tree.cpp
project/tree/binary_tree/tests/input/: 2.txt
report/: Composer.txt  Cook.txt  Sailor.txt  Teacher.txt  index-sort-f.html  index-sort-l.html  index.html
tests/: README.md  gtest.cpp  run.sh
(+73 files in other folders)
